Some sonarqube cleanup
Signed-off-by: Florent BOURASSE <fbourasse@jahia.com>